[gd_scene load_steps=26 format=2]

[ext_resource path="res://src/level/UI.gd" type="Script" id=1]
[ext_resource path="res://src/level/UpgradeSelectScreen.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/coin_rotating.png" type="Texture" id=3]
[ext_resource path="res://assets/kenney/kenney_fontpackage/Fonts/Kenney Mini.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://assets/kenney/uipack_fixed/PNG/blue_button11.png" type="Texture" id=5]
[ext_resource path="res://assets/kenney/uipack_fixed/PNG/green_button11.png" type="Texture" id=6]
[ext_resource path="res://assets/kenney/kenney_fontpackage/Fonts/Kenney High.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://assets/kenney/kenney_fontpackage/Fonts/Kenney Mini Square.ttf" type="DynamicFontData" id=8]
[ext_resource path="res://assets/kenney/uipack_fixed/PNG/grey_panel.png" type="Texture" id=9]
[ext_resource path="res://src/joypad/joypad.tscn" type="PackedScene" id=10]
[ext_resource path="res://src/level/UpgradeIcon.tscn" type="PackedScene" id=11]

[sub_resource type="DynamicFont" id=13]
size = 50
outline_size = 5
outline_color = Color( 0, 0, 0, 1 )
use_mipmaps = true
use_filter = true
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=8]
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=11]
font_data = ExtResource( 7 )

[sub_resource type="StyleBoxTexture" id=9]
texture = ExtResource( 6 )
region_rect = Rect2( 0, 0, 49, 49 )
margin_left = 5.0
margin_right = 5.0
margin_top = 5.0
margin_bottom = 5.0

[sub_resource type="StyleBoxTexture" id=12]
texture = ExtResource( 5 )
region_rect = Rect2( 0, 0, 49, 49 )
margin_left = 5.0
margin_right = 5.0
margin_top = 5.0
margin_bottom = 5.0

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 41, 41 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 41, 0, 41, 41 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 82, 0, 41, 41 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 123, 0, 41, 41 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 164, 0, 41, 41 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 205, 0, 41, 41 )

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="DynamicFont" id=10]
size = 21
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxTexture" id=14]
texture = ExtResource( 9 )
region_rect = Rect2( 0, 0, 100, 100 )
margin_left = 5.0
margin_right = 5.0
margin_top = 5.0
margin_bottom = 5.0

[node name="UI" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 520, 310 )
mouse_filter = 1
script = ExtResource( 1 )
UPGRADE_ICON = ExtResource( 11 )

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.0
margin_right = 1.0
mouse_filter = 1

[node name="Label" type="Label" parent="CenterContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 377.0
margin_top = 268.0
margin_right = 646.0
margin_bottom = 331.0
mouse_filter = 1
custom_fonts/font = SubResource( 13 )
text = "Se fodeu!!!"
align = 1
valign = 1
uppercase = true

[node name="UpgradeSelectScreen" parent="CenterContainer" instance=ExtResource( 2 )]
visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 358.0
margin_top = 200.0
margin_right = 666.0
margin_bottom = 400.0

[node name="Control" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 0.266
margin_left = 36.0
margin_top = 20.0
margin_right = -24.0
margin_bottom = -122.6
size_flags_horizontal = 3

[node name="Label" type="Label" parent="Control"]
margin_top = 2.0
margin_right = 20.0
margin_bottom = 22.0
custom_fonts/font = SubResource( 8 )
text = "Xp"

[node name="ProgressBar" type="ProgressBar" parent="Control"]
margin_left = 24.0
margin_right = 964.0
margin_bottom = 24.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 11 )
custom_styles/fg = SubResource( 9 )
custom_styles/bg = SubResource( 12 )
step = 1.0

[node name="Tween" type="Tween" parent="."]

[node name="CoinInd" type="AnimatedSprite" parent="."]
position = Vector2( 46, 88 )
frames = SubResource( 7 )
frame = 5
playing = true

[node name="Label" type="Label" parent="CoinInd"]
margin_left = 23.0
margin_top = -14.0
margin_right = 63.0
margin_bottom = 13.0
custom_fonts/font = SubResource( 10 )
text = "x 0"

[node name="DebugPanel" type="VBoxContainer" parent="."]
margin_left = 17.0
margin_top = 381.0
margin_right = 165.0
margin_bottom = 583.0

[node name="LblEnemyCount" type="Label" parent="DebugPanel"]
margin_right = 148.0
margin_bottom = 14.0
text = "Enemies: 0"
__meta__ = {
"_edit_lock_": true
}

[node name="Panel" type="Panel" parent="."]
margin_left = 960.0
margin_top = 56.0
margin_right = 1010.0
margin_bottom = 563.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 14 )

[node name="Grid" type="GridContainer" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = 5.0
rect_min_size = Vector2( 40, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/vseparation = 3
custom_constants/hseparation = 0

[node name="Button" type="Button" parent="."]
visible = false
margin_left = 469.0
margin_top = 139.0
margin_right = 581.0
margin_bottom = 159.0
text = "upgrade"

[node name="joypad" parent="." instance=ExtResource( 10 )]
modulate = Color( 1, 1, 1, 0.431373 )
margin_left = 656.0
margin_top = 531.8
margin_right = 655.976
margin_bottom = 538.0
rect_scale = Vector2( 0.7, 0.7 )

[connection signal="upgrade" from="CenterContainer/UpgradeSelectScreen" to="." method="_on_UpgradeSelectScreen_upgrade"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
